# JuMake

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1
.github/workflows/: build.yml
src/: build.rs  context.rs  create_files.rs  create_project.rs  initialize_git.rs  lib.rs  main.rs
templates/AudioPluginTemplate/: CMakeLists.txt.template
templates/ClassTemplates/: Class.cpp.template  Class.h.template  Component.cpp.template  Component.h.template
templates/ConsoleAppTemplate/: CMakeLists.txt.template  Main.cpp.template
templates/GuiApplicationTemplate/: CMakeLists.txt.template  Main.cpp.template  MainComponent.cpp.template  MainComponent.h.template
tests/: integration_test.rs
